<resources>
    <string name="app_name">MovieApp</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="biography">Biography</string>
    <string name="filmography">Filmography</string>
    <string name="see_all">See All</string>
    <string name="actor_picture_content_desc">Actor picture</string>

    <string name="tab_popular">Popular</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="tab_now_playing">Now Playing</string>
    <string name="no_internet_message">Нет интернета. Попробовать ещё раз?</string>
    <string name="movies">MOVIES</string>
    <string name="search">SEARCH</string>
    <string name="favourite">FAVOURITE</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="no_favorite_movies">Ты ещё не добавил фильмы. Может стоит начать?</string>
    <string name="search_hint">Введите название фильма</string>
    <string name="no_movie_found">Ничего не найдено</string>

</resources>