<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/mainBG"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBarMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/search_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_internet_message"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="14dp"
        android:clipToPadding="false"
        android:paddingBottom="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/searchBarMovie"
        app:spanCount="@integer/RecyclerSpan" />

    <TextView
        android:id="@+id/textViewNoMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_movie_found"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/progressBarMovieSearchList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/searchBarMovie"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:background="@color/mainBG"
        >
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>