<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewStatusBarBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:background="#4D000000"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainBG">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <Button
                android:id="@+id/buttonTryAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/no_internet_message"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewBackPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/orig"
                android:contentDescription="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBackPoster"
                app:layout_constraintEnd_toEndOf="@id/imageViewBackPoster"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageViewBackPoster"
                app:layout_constraintTop_toTopOf="@id/imageViewBackPoster"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewButtonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawablePadding="5dp"
                android:padding="6dp"
                android:text="@string/back"
                android:textColor="@color/gray"
                app:drawableStartCompat="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="226dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="13+" />

            <TextView
                android:id="@+id/textViewMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                app:layout_constraintTop_toBottomOf="@+id/textViewPG"
                tools:text="Avengers: \nEnd Game" />

            <TextView
                android:id="@+id/textViewGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pink"
                app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                app:layout_constraintTop_toBottomOf="@+id/textViewMovieName"
                tools:text="Action, Adventure, Fantasy" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/pink"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                app:layout_constraintTop_toBottomOf="@+id/textViewGenres"
                tools:rating="4"
                tools:text="Action, Adventure, Drama" />

            <TextView
                android:id="@+id/textViewReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textColor="@color/lightGray"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toTopOf="@+id/ratingBar"
                tools:text="125 REVIEWS" />

            <TextView
                android:id="@+id/textViewStoryline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/storyline"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/guideLineStart"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/textViewFilmOverview"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/guideLineStart"
                app:layout_constraintTop_toBottomOf="@+id/textViewStoryline"
                tools:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe." />

            <TextView
                android:id="@+id/textViewCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"

                app:layout_constraintStart_toStartOf="@id/guideLineStart"
                app:layout_constraintTop_toBottomOf="@+id/textViewFilmOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCast" />

            <ProgressBar
                android:id="@+id/progressBarMovieList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>