<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#191926"
        android:paddingBottom="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageViewBackPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orig"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/imageViewBackPoster"
            app:layout_constraintEnd_toEndOf="@id/imageViewBackPoster"
            app:layout_constraintStart_toStartOf="@+id/imageViewBackPoster"
            app:layout_constraintTop_toTopOf="@id/imageViewBackPoster" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="56dp"
            android:text="@string/back"
            android:textColor="@color/lightGray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="+13"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackPoster"
            app:layout_constraintBottom_toTopOf="@+id/textViewFilmName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewFilmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="-7sp"
            android:text="Avengers: \nEnd Game"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/imageViewBackPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewBackPoster" />

        <TextView
            android:id="@+id/textViewGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Action, Adventure, Fantasy"
            android:textColor="@color/pink"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilmName" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:progressBackgroundTint="@color/lightGray"
            android:progressTint="@color/pink"
            android:rating="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGenres" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="125 REVIEWS"
            android:textColor="@color/lightGray"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/textViewStoryline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/textViewFilmInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:alpha="0.75"
            android:lineSpacingExtra="4sp"
            android:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe."
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textViewStoryline"
            app:layout_constraintTop_toBottomOf="@+id/textViewStoryline" />

        <TextView
            android:id="@+id/textViewCastLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="7dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/textViewFilmName"
            app:layout_constraintTop_toBottomOf="@+id/textViewFilmInfo" />

        <ImageView
            android:id="@+id/actorImageViewOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_rd"
            app:layout_constraintStart_toStartOf="@id/textViewCastLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCastLabel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Rober Downey Jr."
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/actorImageViewOne"
            app:layout_constraintStart_toStartOf="@+id/actorImageViewOne"
            app:layout_constraintTop_toBottomOf="@+id/actorImageViewOne" />

        <ImageView
            android:id="@+id/actorImageViewTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/movie_ce"
            app:layout_constraintStart_toEndOf="@id/actorImageViewOne"
            app:layout_constraintTop_toBottomOf="@+id/textViewCastLabel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Chris Evans"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/actorImageViewTwo"
            app:layout_constraintStart_toStartOf="@+id/actorImageViewTwo"
            app:layout_constraintTop_toBottomOf="@+id/actorImageViewTwo" />

        <ImageView
            android:id="@+id/actorImageViewThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/movie_mr"
            app:layout_constraintStart_toEndOf="@id/actorImageViewTwo"
            app:layout_constraintTop_toBottomOf="@+id/textViewCastLabel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Mark\nRuffalo"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/actorImageViewThree"
            app:layout_constraintStart_toStartOf="@+id/actorImageViewThree"
            app:layout_constraintTop_toBottomOf="@+id/actorImageViewOne" />

        <ImageView
            android:id="@+id/actorImageViewFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/movie_ch"
            app:layout_constraintStart_toEndOf="@id/actorImageViewThree"
            app:layout_constraintTop_toBottomOf="@+id/textViewCastLabel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Chris Hemsworth"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/actorImageViewFour"
            app:layout_constraintStart_toStartOf="@+id/actorImageViewFour"
            app:layout_constraintTop_toBottomOf="@+id/actorImageViewOne" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
